Item273: rename twiki.tmpl -> foswiki.tmpl
git-svn-id: http://svn.foswiki.org/trunk/GenerateSearchPlugin@906 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/templates/oopsgensearch.tmpl
+++ b/templates/oopsgensearch.tmpl
@@ -1,4 +1,4 @@
-%TMPL:INCLUDE{"twiki"}%
+%TMPL:INCLUDE{"foswiki"}%
 %TMPL:DEF{"titleaction"}%(oops) %TMPL:END%
 %TMPL:DEF{"webaction"}% *%PARAM1%* %TMPL:END%
 %TMPL:DEF{"heading"}%%TMPL:END%
